# opengl-cpp-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
cmake/: fetch_assimp.cmake  fetch_glad.cmake  fetch_glfw.cmake  fetch_glm.cmake  fetch_stb_image.cmake
include/: utils.h
jobs/: build.yml
src/: main.cpp  utils.cpp
